--- a/BugFables.AssetsRedirector.csproj
+++ b/BugFables.AssetsRedirector.csproj
@@ -13,12 +13,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>C:\Users\aldel\Documents\1.1-FINAL\BepInEx\plugins\</OutputPath>
+    <OutputPath>Output\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningLevel>0</WarningLevel>
-    <OutputPath>C:\Users\aldelaro5\Documents\1.1-FINAL\BepInEx\plugins\AssetsRedirector\</OutputPath>
+    <OutputPath>Output\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -283,5 +283,9 @@
       <HintPath>Libs\UnityEngine.XRModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Output\" />
   </ItemGroup>
 </Project>
